Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/028_shadowing_decl_more_fpars.xi
f(x:int, y:int)
f(x:int, y:int, z:bool)

//@PRACOWNIA
//@should_not_typecheck
